Issue #SB-25770 Add certificate : The UI is distorted in add certificate page and nothing happens when the user tries to add a certificate to the course

--- a/src/app/client/src/app/modules/certificate/components/certificate-configuration/certificate-configuration.component.scss
+++ b/src/app/client/src/app/modules/certificate/components/certificate-configuration/certificate-configuration.component.scss
@@ -129,6 +129,11 @@
       position: relative;
     }
 
+    .select-template-container-area{
+      height: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+
     .select-template-content {
       height: 100vh;
       width: 100%;
